# whatsapp-web-bot

./: .env.example  .eslintignore  .gitignore  API.md  ARCHITECTURE.md  CHANGELOG-v2.0.md  DEVELOPMENT.md  README.md  TAURI_MIGRATION_PLAN.md  broadcast.js  build-portable.ps1  create-shortcut.ps1  index.html  lengdangb2b_total.csv  package.json  start-whatsapp-bot.bat  vite.config.ts  web.js
config/: default.js
docs/: TAURI_DESIGN.md  TAURI_IMPLEMENTATION_PLAN.md
public/: index.html
public/css/: style.css
public/js/: app.js
src/: App.vue  Client.js
src-node/: .gitignore  api-server.js  index.js  package.json
src-node/config/: default.js  rate-limits.js
src-node/db/: connection.js  schema.sql
src-node/routes/: accounts.js  autoreply.js  broadcast.js  chatmanage.js  contacts.js  extras.js  groups.js  imported-contacts.js  media.js  schedule.js  status.js
src-node/services/: account-store.js  anti-detection.js  broadcast.js  client-manager.js  message-randomizer.js  rate-limiter.js  session-manager.js
src-node/simulators/: behavior.js  mouse.js  scroll.js  typing.js
src-node/utils/: logger.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: autoreply.rs  backend.rs  broadcast.rs  chat.rs  contacts.rs  mod.rs  proxy.rs  schedule.rs  system.rs  whatsapp.rs
src-tauri/src/models/: broadcast.rs  contact.rs  mod.rs
src-tauri/src/services/: event_forwarder.rs  mod.rs  node_process.rs
src/api/: tauri.ts
src/authStrategies/: LocalAuth.js
(+39 files in other folders)
