[package]
name = "whatsapp-bot-tauri"
version = "3.0.0"
description = "WhatsApp Bot Desktop App"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.1", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["custom-protocol"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19"
chrono = { version = "0.4", features = ["clock"] }
log = "0.4"
tauri-plugin-dialog = "2"
